Fixed the Main Activity and added ChaptersActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.MainTabViews"
         tools:targetApi="31">
         <activity
+            android:name=".ChaptersActivity"
+            android:exported="false"
+            android:label="@string/title_activity_chapters"
+            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
