--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,21 +14,23 @@
         tools:targetApi="31" >
         <activity
             android:name=".LaunchingActivity"
-            android:exported="true"
-            android:screenOrientation="portrait">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ChaptersActivity"
             android:exported="false"
             android:label="@string/title_activity_chapters"
-            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar" />
+            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
+            android:parentActivityName=".MainActivity"/>
         <activity
-            android:name=".MainActivity"/>
+            android:name=".MainActivity"
+            android:parentActivityName=".LaunchingActivity"/>
 
 
     </application>
